Dashboard module implementation

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,6 @@
 :root {
-  --primary: "#71C9CE";
-  --secondary: "#A6E3E9";
-  --tertiary: "#CBF1F5";
-  --quaternary: "#E3FDFD";
+  --primary: #71c9ce;
+  --secondary: #a6e3e9;
+  --tertiary: #cbf1f5;
+  --quaternary: #e3fdfd;
 }
