Apex chart implementation

--- a/src/app/features/dashboard/components/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid mb-4">
   <h4>Dashboard</h4>
   <app-stats></app-stats>
   <div class="row mt-3">
@@ -7,6 +7,33 @@
     </div>
     <div class="col-md-4">
       <app-gender-chart></app-gender-chart>
+    </div>
+    <div class="col-md-6 mt-4">
+      <app-line-column></app-line-column>
+    </div>
+    <div class="col-md-6 mt-4">
+      <app-line-area></app-line-area>
+    </div>
+    <div class="col-md-4 mt-4">
+      <app-pie-donuts></app-pie-donuts>
+    </div>
+    <div class="col-md-8 mt-4">
+      <app-scatter></app-scatter>
+    </div>
+    <div class="col-md-3 mt-4">
+      <app-circle></app-circle>
+    </div>
+    <div class="col-md-6 mt-4">
+      <app-time-line></app-time-line>
+    </div>
+    <div class="col-md-3 mt-4">
+      <app-radial-bar></app-radial-bar>
+    </div>
+    <div class="col-md-4 mt-4">
+      <app-radar-chart></app-radar-chart>
+    </div>
+    <div class="col-md-4 mt-4">
+      <app-pollar></app-pollar>
     </div>
   </div>
 </div>
