--- a/src/app/features/dashboard/components/scatter/scatter.component.html
+++ b/src/app/features/dashboard/components/scatter/scatter.component.html
@@ -1,6 +1,6 @@
 <div class="card rounded shadow p-3" style="border: none">
   <div class="card-header">
-    <h5 class="h5 p-2">Customer</h5>
+    <h5 class="h5 p-2">Bar Charts</h5>
   </div>
   <div class="card-content">
     <div id="chart">
@@ -8,15 +8,10 @@
         [series]="chartOptions.series"
         [chart]="chartOptions.chart"
         [dataLabels]="chartOptions.dataLabels"
-        [labels]="chartOptions.labels"
         [plotOptions]="chartOptions.plotOptions"
-        [yaxis]="chartOptions.yaxis"
-        [legend]="chartOptions.legend"
-        [fill]="chartOptions.fill"
-        [colors]="chartOptions.colors"
-        [stroke]="chartOptions.stroke"
-        [tooltip]="chartOptions.tooltip"
         [xaxis]="chartOptions.xaxis"
+        [stroke]="chartOptions.stroke"
+        [colors]="chartOptions.colors"
       ></apx-chart>
     </div>
   </div>
