--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,34 @@
+// :root {
+//   --primary: #71c9ce;
+//   --secondary: #a6e3e9;
+//   --tertiary: #cbf1f5;
+//   --quaternary: #e3fdfd;
+// }
+
+// :root {
+//   --primary: #0081c9;
+//   --secondary: #5bc0f8;
+//   --tertiary: #86e5ff;
+//   --quaternary: #ffc93c;
+// }
+
 :root {
-  --primary: #71c9ce;
-  --secondary: #a6e3e9;
-  --tertiary: #cbf1f5;
-  --quaternary: #e3fdfd;
+  --primary: #654e92;
+  --secondary: #6c9bcf;
+  --tertiary: #a5c0dd;
+  --quaternary: #ebd8b2;
 }
+
+// :root {
+//   --primary: #3f3b6c;
+//   --secondary: #624f82;
+//   --tertiary: #9f73ab;
+//   --quaternary: #a3c7d6;
+// }
+
+// :root {
+//   --primary: #fdfdbd;
+//   --secondary: #c8ffd4;
+//   --tertiary: #b8e8fc;
+//   --quaternary: #b1afff;
+// }
