--- a/src/app/features/dashboard/components/pollar/pollar.component.html
+++ b/src/app/features/dashboard/components/pollar/pollar.component.html
@@ -1,22 +1,18 @@
 <div class="card rounded shadow p-3" style="border: none">
   <div class="card-header">
-    <h5 class="h5 p-2">Customer</h5>
+    <div class="h5 p-2">Pollar Chart</div>
   </div>
   <div class="card-content">
     <div id="chart">
       <apx-chart
         [series]="chartOptions.series"
         [chart]="chartOptions.chart"
-        [dataLabels]="chartOptions.dataLabels"
         [labels]="chartOptions.labels"
-        [plotOptions]="chartOptions.plotOptions"
-        [yaxis]="chartOptions.yaxis"
-        [legend]="chartOptions.legend"
         [fill]="chartOptions.fill"
-        [colors]="chartOptions.colors"
         [stroke]="chartOptions.stroke"
-        [tooltip]="chartOptions.tooltip"
-        [xaxis]="chartOptions.xaxis"
+        [responsive]="chartOptions.responsive"
+        [theme]="chartOptions.theme"
+        [colors]="chartOptions.colors"
       ></apx-chart>
     </div>
   </div>
