--- a/src/app/features/dashboard/components/radial-bar/radial-bar.component.html
+++ b/src/app/features/dashboard/components/radial-bar/radial-bar.component.html
@@ -1,22 +1,16 @@
 <div class="card rounded shadow p-3" style="border: none">
   <div class="card-header">
-    <h5 class="h5 p-2">Customer</h5>
+    <h5 class="h5 p-2">Radial-Bar Charts</h5>
   </div>
   <div class="card-content">
     <div id="chart">
       <apx-chart
         [series]="chartOptions.series"
         [chart]="chartOptions.chart"
-        [dataLabels]="chartOptions.dataLabels"
-        [labels]="chartOptions.labels"
         [plotOptions]="chartOptions.plotOptions"
-        [yaxis]="chartOptions.yaxis"
-        [legend]="chartOptions.legend"
-        [fill]="chartOptions.fill"
+        [labels]="chartOptions.labels"
         [colors]="chartOptions.colors"
-        [stroke]="chartOptions.stroke"
-        [tooltip]="chartOptions.tooltip"
-        [xaxis]="chartOptions.xaxis"
+        [dataLabels]="chartOptions.dataLabels"
       ></apx-chart>
     </div>
   </div>
