--- a/src/app/features/dashboard/components/time-line/time-line.component.html
+++ b/src/app/features/dashboard/components/time-line/time-line.component.html
@@ -1,22 +1,20 @@
 <div class="card rounded shadow p-3" style="border: none">
   <div class="card-header">
-    <h5 class="h5 p-2">Customer</h5>
+    <h5>Comparision</h5>
   </div>
   <div class="card-content">
     <div id="chart">
       <apx-chart
         [series]="chartOptions.series"
         [chart]="chartOptions.chart"
-        [dataLabels]="chartOptions.dataLabels"
-        [labels]="chartOptions.labels"
-        [plotOptions]="chartOptions.plotOptions"
-        [yaxis]="chartOptions.yaxis"
-        [legend]="chartOptions.legend"
         [fill]="chartOptions.fill"
-        [colors]="chartOptions.colors"
-        [stroke]="chartOptions.stroke"
-        [tooltip]="chartOptions.tooltip"
+        [grid]="chartOptions.grid"
+        [dataLabels]="chartOptions.dataLabels"
+        [plotOptions]="chartOptions.plotOptions"
         [xaxis]="chartOptions.xaxis"
+        [yaxis]="chartOptions.yaxis"
+        [colors]="chartOptions.colors"
+        [tooltip]="chartOptions.tooltip"
       ></apx-chart>
     </div>
   </div>
