Implement Chart.js

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -5,19 +5,19 @@
 //   --quaternary: #e3fdfd;
 // }
 
-// :root {
-//   --primary: #0081c9;
-//   --secondary: #5bc0f8;
-//   --tertiary: #86e5ff;
-//   --quaternary: #ffc93c;
-// }
-
 :root {
-  --primary: #654e92;
-  --secondary: #6c9bcf;
-  --tertiary: #a5c0dd;
-  --quaternary: #ebd8b2;
+  --primary: #0081c9;
+  --secondary: #5bc0f8;
+  --tertiary: #86e5ff;
+  --quaternary: #ffc93c;
 }
+
+// :root {
+//   --primary: #654e92;
+//   --secondary: #6c9bcf;
+//   --tertiary: #a5c0dd;
+//   --quaternary: #ebd8b2;
+// }
 
 // :root {
 //   --primary: #3f3b6c;
@@ -27,8 +27,8 @@
 // }
 
 // :root {
-//   --primary: #fdfdbd;
-//   --secondary: #c8ffd4;
-//   --tertiary: #b8e8fc;
-//   --quaternary: #b1afff;
+//   --primary: #aa77ff;
+//   --secondary: #c9eeff;
+//   --tertiary: #97deff;
+//   --quaternary: #62cdff;
 // }
